Issue #25118: Fix a regression of Python 3.5.0 in os.waitpid() on Windows.

Add an unit test on os.waitpid()